VDR Plugin 'streamdev' Revision History
---------------------------------------
 
- Proper fix for "client sends ABRT after TUNE". Obsoletes many hacks in client
- Added CLOCK_MONOTONIC timestamp and thread id to Dprintf
- Silenced warning (thanks to Rolf Ahrenberg)
- Updated Finnish translation (thanks to Rolf Ahrenberg)
- Replaced server-side suspend modes with priority based precedence handling
- Client-side priority handling for VDR >= 1.7.25 and servers running VTP > 1.0
- Introduced VTP protocol version numbering for easier compatibility handling
  between different client and server versions. The server includes the protocol
  version in its greeting string, the client reports its version with the new
  command "VERS".
- Dropped compatibility of streamdev-server with VDR < 1.7.25

2012-05-12: Version 0.5.2

- Use fileno() to retrieve the fd from a FILE structure (submitted by an
  anonymous user)
- New special meaning "show current channel" when channel 0 is requested.
  Applies to HTTP streaming only (thanks to Rolf Ahrenberg)
- Fixed ProvidesChannel() on client always returning true since the new timeout
  option has been added.
- Updated Finnish translation (thanks to Rolf Ahrenberg)
- With VDR 1.7.25 priorities down to -99 will be used. Please update
  "Minimum Priority" in streamdev-client setup.
- Use the new streamdev-client setup option "Live TV Priority" to control
  precedence among multiple clients. The VDR option "Primary Limit" which
  has previouly been used for this purpose has been dropped in VDR 1.7.25.
- Timout for network operations now configurable in streamdev-client setup
- Added timeout to Connect()
- Report the server-side HTTP status "503 Service unavailable" instead of
  the client-side error "409 Conflict" when a channel is unavailable
  (suggested by Methodus)
- Update of po headers and Finnish translation (thanks to Rolf Ahrenberg)
- support for non-cycle-free setups (e.g. where two VDRs mutually share